--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
   <string name="app_name">News App</string>
   <string name="headlines">Headlines</string>
+  <string name="open_source">Open Source</string>
 </resources>
